gcc-defaults (1.37) unstable; urgency=medium

  [Ludovic Brenta]
  * Provide a gnat package that depends on the default Ada compiler.
  * Update README.Debian for gnat, gfortran.  Simplify it.

 -- Ludovic Brenta <ludovic@ludovic-brenta.org>  Sun, 11 Jun 2006 01:08:10 +0200
	
gcc-defaults (1.36) unstable; urgency=medium

  * Make gcc-4.1 the default C compiler, g++-4.1 the default C++ compiler,
    gobjc-4.1 the default ObjC compiler, treelang-4.1 the default Treelang
    compiler, gfortran-4.1 the default Fortran compiler.
    Closes: #366820.
  * Don't build the chill package anymore.
  * Build-depend on gcj-4.1-base, instead of gcc-4.0-base. Closes: #367952.

 -- Matthias Klose <doko@debian.org>  Tue,  6 Jun 2006 03:10:08 +0200

gcc-defaults (1.35) unstable; urgency=low

  * Make gij-4.1/gcj-4.1 the default gij/gcj.
  * gij: Add a conflict to java-gcj-compat (<< 1.0.56).
  * Fix typo in gpc package description (closes: #363619).
  * gobjc++: Recommend g++ and gobjc.
  * Handle c89/c99 binaries by alternatives (closes: #365039).

 -- Matthias Klose <doko@debian.org>  Sun,  7 May 2006 11:09:59 +0200

gcc-defaults (1.34) unstable; urgency=low

  * Fix typo in debian/rules.

 -- Matthias Klose <doko@debian.org>  Sun,  2 Apr 2006 13:46:30 +0000

gcc-defaults (1.33) unstable; urgency=low

  * Add gobjc++ package.
  * Build-Depend on gcc-4.1-base.

 -- Matthias Klose <doko@debian.org>  Sat,  1 Apr 2006 12:21:34 +0000

gcc-defaults (1.32) unstable; urgency=low

  * Depend on the 3.4.6 and 4.0.3 final releases.
  * Build-depend on the appropriate gcc-X.Y-base, gcj-X.Y-base packages.

 -- Matthias Klose <doko@debian.org>  Thu, 23 Mar 2006 22:36:58 +0100

gcc-defaults (1.31) unstable; urgency=low

  * Use epoch for all packages.

 -- Matthias Klose <doko@debian.org>  Sat, 24 Dec 2005 02:46:58 +0100

gcc-defaults (1.30) unstable; urgency=medium

  * Fix gfortran prerm script (closes: #334081).
  * Clarify gfortran package description (closes: #333348).