@@ -207,7 +207,7 @@ Description: Documentation for the GNU C compilers (gcc, gobjc, g++)
 Package: gnat
 Architecture: alpha amd64 hppa i386 ia64 mips mipsel powerpc s390 sparc kfreebsd-i386
 Priority: optional
-Depends: gnat-${pv:gcc}
+Depends: gnat-${pv:gcc}, cpp (>= ${version:cpp})
 Conflicts: gnat-3.3, gnat-3.4, gnat-4.0, gnat-4.1 (<< 4.1.1-6)
 Description: The GNU Ada compiler
  This is a dependency package providing the default GNU Ada compiler.
